--- a/Group Project/index.html
+++ b/Group Project/index.html
@@ -1,7 +1,7 @@
 
 <html>
 
-<head>
+<center><head>
   <meta charset="UTF-8">
   <title>Group 10 Project</title>
    <script src="https://cdn.rawgit.com/v21/tracery/master/tracery.js"></script>
@@ -15,12 +15,14 @@
     <script src="https://cdn.rawgit.com/galaxykate/tracery/master/js/grammars.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
+  
 </head>
 
 <body>
   <p id="status"></p>
   <p id="noteAndVolume"></p>
   <script src="sketch.js"></script>
+  
 </body>
-
+</center>
 </html>
